Finished index page and added createEventsPage

--- a/src/main/resources/templates/temp.html
+++ b/src/main/resources/templates/temp.html
@@ -9,10 +9,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin - Bootstrap Admin Template</title>
+    <title>Events - SET TITLE</title>
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link href="/css/bootstrap4.min.css" rel="stylesheet">
+    <link href="/css/bootstrap-grid.min.css" rel="stylesheet">
+    <link href="/css/bootstrap-reboot.min.css" rel="stylesheet">
     <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
@@ -56,13 +58,13 @@
                         <a href="javascript:;" data-toggle="collapse" data-target="#sub-event"><i class="fa fa-fw fa-calendar"></i> Events <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="sub-event" class="collapse">
                             <li>
-                                <a href="#">Create</a>
+                                <a href="/events/create">Create</a>
+                            </li>
+                            <li>
+                                <a href="#">Edit</a>
                             </li>
                             <li>
                                 <a href="#">Search</a>
-                            </li>
-                            <li>
-                                <a href="#">List</a>
                             </li>
                         </ul>
                     </li>
