--- a/src/main/resources/templates/create-event.html
+++ b/src/main/resources/templates/create-event.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Events - Home</title>
+    <title>Events - SET TITLE</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap4.min.css" rel="stylesheet">
@@ -51,14 +51,14 @@
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li class="active">
+                    <li>
                         <a href="/index"><i class="fa fa-fw fa-home"></i> Home</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="javascript:;" data-toggle="collapse" data-target="#sub-event"><i class="fa fa-fw fa-calendar"></i> Events <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="sub-event" class="collapse">
-                            <li>
-                                <a href="/event/create">Create</a>
+                            <li class="active">
+                                <a href="/events/create">Create</a>
                             </li>
                             <li>
                                 <a href="#">Edit</a>
@@ -104,33 +104,38 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Home
-                            <!--<small>Events</small>-->
+                            Lottery
+                            <!--<small>Subheading</small>-->
                         </h1>
                         <ol class="breadcrumb">
+                            <li>
+                                <i class="fa fa-home"></i>  <a href="/index">Home</a>
+                            </li>
+                            <li>
+                                <i class="fa fa-ticket"></i> Events
+                            </li>
                             <li class="active">
-                                <i class="fa fa-home"></i>  Home
+                                <i class="fa fa-plus"></i> Create
                             </li>
                         </ol>
                     </div>
                 </div>
                 <!-- /.row -->
-                <div class="row justify-content-center text-center">
+                <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="jumbotron">
-                            <div name="event-name" th:if="${eventName} != null">
-                                <h1 class="display-3" th:text="${eventName}">EVENT NAME</h1>
-                            </div>
                             <form name="event-select" th:if="${eventName} == null">
-                                <div class="row justify-content-center">
-                                    <div class="col-lg-6 align-self-center form-group">
-                                        <select name="events" class="form-control" required="required">
-                                            <option selected disabled>Select an event</option>
-                                            <option th:each="event : ${events}" th:value="${event.id}" th:text="${event.name}"></option>
-                                        </select>
+                                <div class="row justify-content-center no-gutters">
+                                    <div class="col-lg-6 form-group">
+                                        <label for="event-name"><span class="text-danger">*</span>Event Name</label>
                                     </div>
                                 </div>
-                                <div class="row justify-content-center">
+                                <div class="row justify-content-center no-gutters">
+                                    <div class="col-lg-6 align-self-center form-group">
+                                        <input type="text" name="event-name" class="form-control">
+                                    </div>
+                                </div>
+                                <div class="row justify-content-center text-center">
                                     <div class="col-lg-6">
                                         <button type="button" name="set-event" class="btn btn-success">SUBMIT</button>
                                     </div>
@@ -138,8 +143,7 @@
                             </form>
                             <hr class="my-4">
                             <p class="lead">
-                                <p class="lead" th:if="${eventDate} != null" th:text="${eventDate}">EVENT DATE</p>
-                                <p class="lead" th:if="${eventDate} == null">NO EVENT SELECTED.</p>
+                                Please fill in all fields.
                             </p>
                         </div>
                     </div>
@@ -165,9 +169,6 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="/js/bootstrap.min.js"></script>
-
-    <!-- THIRIO CUSTOM SCRIPTS -->
-    <script src="/js/scripts.js"></script>
 
 </body>
 
