Added dynamic navbar titles

--- a/src/main/resources/templates/lottery.html
+++ b/src/main/resources/templates/lottery.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Thirio - EVENTS</a>
+                <a class="navbar-brand" href="index.html"  th:text="${title}">Thirio - EVENTS</a>
             </div>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
