--- a/src/main/resources/templates/temp.html
+++ b/src/main/resources/templates/temp.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Events - SET TITLE</title>
+    <title>EVENTS - SET TITLE</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap4.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Thirio - EVENTS</a>
+                <a class="navbar-brand" href="index.html" th:text="${title}">Thirio - EVENTS</a>
             </div>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
