--- a/src/main/resources/templates/attendance.html
+++ b/src/main/resources/templates/attendance.html
@@ -82,10 +82,10 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="/attendance"><i class="fa fa-fw fa-clock-o"></i> Attendance</a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="/lottery"><i class="fa fa-fw fa-ticket"></i> Lottery</a>
                     </li>
                     <li>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <!-- /.row -->
-                <div class="row justify-content-center text-center">
+                <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="jumbotron">
                             <p name="student-info">
@@ -126,11 +126,11 @@
                             <hr class="my-4">
                             <p class="lead">
                                 <form name="attendance">
-                                    <div class="row justify-content-center text-center">
-                                        <div class="col-lg-3">
+                                    <div class="row justify-content-center no-gutters">
+                                        <div class="col-lg-2">
                                             <input type="text" name="idnum" placeholder="ID NUMBER" required="required" class="form-control">
                                         </div>
-                                        <div class="col-lg-3">
+                                        <div class="col-lg-1 text-center">
                                             <button type="button" name="submit-attendance" class="btn btn-success">ENTER</button>
                                         </div>
                                     </div>
