Fixed attendance view and script

--- a/src/main/resources/templates/attendance.html
+++ b/src/main/resources/templates/attendance.html
@@ -121,7 +121,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="jumbotron">
-                            <p name="student-info">
+                            <p name="student-info" class="text-center">
                             </p>
                             <hr class="my-4">
                             <p class="lead">
