--- a/src/main/resources/templates/create-student.html
+++ b/src/main/resources/templates/create-student.html
@@ -63,9 +63,9 @@
                             <li>
                                 <a href="/event/edit">Edit</a>
                             </li>
-                            <!--<li>
-                                <a href="#">Search</a>
-                            </li>-->
+                            <li>
+                                <a href="/event/status">Status</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="active">
@@ -77,9 +77,9 @@
                             <li>
                                 <a href="/student/search">Search</a>
                             </li>
-                            <li>
+                            <!--<li>
                                 <a href="/student/list">List</a>
-                            </li>
+                            </li>-->
                         </ul>
                     </li>
                     <li>
@@ -104,8 +104,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Lottery
-                            <!--<small>Subheading</small>-->
+                            Stduent
+                            <small>Create</small>
                         </h1>
                         <ol class="breadcrumb">
                             <li>
@@ -115,7 +115,7 @@
                                 <i class="fa fa-users"></i> Student
                             </li>
                             <li class="active">
-                                <i class="fa fa-plus"></i> Lottery
+                                <i class="fa fa-plus"></i> Create
                             </li>
                         </ol>
                     </div>
@@ -125,6 +125,16 @@
                     <div class="col-lg-12">
                         <div class="jumbotron">
                             <form name="student-create">
+                                <div class="row justify-content-center" th:if="${create}==true">
+                                    <div class="col-lg-6 alert alert-success" role="alert">
+                                        <strong>Done!</strong> Student was successfully registered.
+                                    </div>
+                                </div>
+                                <div class="row justify-content-center" th:if="${create}==false">
+                                    <div class="col-lg-6 alert alert-danger" role="alert">
+                                        <strong>Oops!</strong> Something went wrong. :(
+                                    </div>
+                                </div>
                                 <div class="row justify-content-center">
                                     <div class="col-lg-6">
                                         <div class="row justify-content-center form-group">
@@ -132,7 +142,7 @@
                                                 <label for="studentid" class="col-form-label"><span class="text-danger">*</span>ID #</label>
                                             </div>
                                             <div class="col-lg-6">
-                                                <input type="text" name="studentid" placeholder="ID NUMBER" class="form-control">
+                                                <input type="text" name="studentid" placeholder="ID NUMBER" required="required" class="form-control">
                                             </div>
                                         </div>
                                         <div class="row justify-content-center form-group">
@@ -140,7 +150,7 @@
                                                 <label for="firstname" class="col-form-label"><span class="text-danger">*</span>First Name</label>
                                             </div>
                                             <div class="col-lg-6">
-                                                <input type="text" name="firstname" placeholder="FIRST NAME" class="form-control">
+                                                <input type="text" name="firstname" placeholder="FIRST NAME" required="required" class="form-control">
                                             </div>
                                         </div>
                                         <div class="row justify-content-center form-group">
@@ -148,7 +158,7 @@
                                                 <label for="lastname" class="col-form-label"><span class="text-danger">*</span>Last Name</label>
                                             </div>
                                             <div class="col-lg-6">
-                                                <input type="text" name="lastname" placeholder="LAST NAME" class="form-control">
+                                                <input type="text" name="lastname" placeholder="LAST NAME" required="required" class="form-control">
                                             </div>
                                         </div>
                                         <div class="row justify-content-center form-group">
@@ -156,7 +166,19 @@
                                                 <label for="college" class="col-form-label"><span class="text-danger">*</span>College</label>
                                             </div>
                                             <div class="col-lg-6">
-                                                <input type="text" name="college" placeholder="COLLEGE" class="form-control">
+                                                <select name="college" required="required" class="form-control">
+                                                    <option selected disabled>SELECT COLLEGE</option>
+                                                    <option value="CBA">CBA</option>
+                                                    <option value="CAS">CAS</option>
+                                                    <option value="CCJE">CCJE</option>
+                                                    <option value="CAMP">CAMP</option>
+                                                    <option value="CCS">CCS</option>
+                                                    <option value="CED">CED</option>
+                                                    <option value="CEA">CEA</option>
+                                                    <option value="CON">CON</option>
+                                                    <option value="SOM">SOM</option>
+                                                    <option value="SOL">SOL</option>
+                                                </select>
                                             </div>
                                         </div>
                                         <div class="row justify-content-center form-group">
@@ -164,7 +186,7 @@
                                                 <label for="course" class="col-form-label"><span class="text-danger">*</span>Course</label>
                                             </div>
                                             <div class="col-lg-6">
-                                                <input type="text" name="course" placeholder="COURSE" class="form-control">
+                                                <input type="text" name="course" placeholder="COURSE" required="required" class="form-control">
                                             </div>
                                         </div>
                                         <div class="row justify-content-center form-group">
