--- a/src/main/resources/templates/temp.html
+++ b/src/main/resources/templates/temp.html
@@ -63,12 +63,12 @@
                             <li>
                                 <a href="/event/edit">Edit</a>
                             </li>
-                            <!--<li>
-                                <a href="#">Search</a>
-                            </li>-->
+                            <li>
+                                <a href="/event/status">Status</a>
+                            </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="javascript:;" data-toggle="collapse" data-target="#sub-students"><i class="fa fa-fw fa-users"></i> Students <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="sub-students" class="collapse">
                             <li>
@@ -77,15 +77,15 @@
                             <li>
                                 <a href="/student/search">Search</a>
                             </li>
-                            <li>
+                            <!--<li>
                                 <a href="/student/list">List</a>
-                            </li>
+                            </li>-->
                         </ul>
                     </li>
                     <li>
                         <a href="/attendance"><i class="fa fa-fw fa-clock-o"></i> Attendance</a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="/lottery"><i class="fa fa-fw fa-ticket"></i> Lottery</a>
                     </li>
                     <li>
