--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,9 +63,9 @@
                             <li>
                                 <a href="/event/edit">Edit</a>
                             </li>
-                            <!--<li>
-                                <a href="#">Search</a>
-                            </li>-->
+                            <li>
+                                <a href="/event/status">Status</a>
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -77,9 +77,9 @@
                             <li>
                                 <a href="/student/search">Search</a>
                             </li>
-                            <li>
+                            <!--<li>
                                 <a href="/student/list">List</a>
-                            </li>
+                            </li>-->
                         </ul>
                     </li>
                     <li>
