Added search result count

--- a/src/main/resources/templates/search-student.html
+++ b/src/main/resources/templates/search-student.html
@@ -156,7 +156,7 @@
                                         </div>
                                         <div class="col-lg-6">
                                             <select name="college" class="form-control">
-                                                <option selected disabled>SELECT COLLEGE</option>
+                                                <option selected disabled value="">SELECT COLLEGE</option>
                                                 <option value="CBA">CBA</option>
                                                 <option value="CAS">CAS</option>
                                                 <option value="CCJE">CCJE</option>
@@ -192,9 +192,12 @@
                                         <table class="table">
                                             <thead>
                                                 <tr>
+                                                    <td colspan="5"><strong>Search Result:</strong> <span name="res-count">0</span> Item/s</td>
+                                                </tr>
+                                                <tr>
                                                     <th>ID #</th>
-                                                    <th>First Name</th>
                                                     <th>Last Name</th>
+                                                    <th>First Name</th>
                                                     <th>College</th>
                                                     <th>Course</th>
                                                 </tr>
