--- a/src/main/resources/templates/create-student.html
+++ b/src/main/resources/templates/create-student.html
@@ -104,7 +104,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Stduent
+                            Student
                             <small>Create</small>
                         </h1>
                         <ol class="breadcrumb">
