--- a/src/main/resources/templates/search-student.html
+++ b/src/main/resources/templates/search-student.html
@@ -104,7 +104,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Stduent
+                            Student
                             <small>Search</small>
                         </h1>
                         <ol class="breadcrumb">
@@ -156,7 +156,7 @@
                                         </div>
                                         <div class="col-lg-6">
                                             <select name="college" class="form-control">
-                                                <option selected disabled value="">SELECT COLLEGE</option>
+                                                <option selected value="">ANY COLLEGE</option>
                                                 <option value="CBA">CBA</option>
                                                 <option value="CAS">CAS</option>
                                                 <option value="CCJE">CCJE</option>
@@ -180,7 +180,8 @@
                                     </div>
                                     <div class="row justify-content-center form-group">
                                         <div class="col-lg-12 text-center">
-                                                <button type="button" name="search-student" class="btn btn-success">SEARCH</button>
+                                                <button type="button" name="search-student" class="btn btn-success">SEARCH</button>&nbsp;
+                                                <button type="button" name="search-clear" class="btn btn-danger">CLEAR</button>
                                         </div>
                                     </div>
                                 </div>
