--- a/src/main/resources/templates/lottery.html
+++ b/src/main/resources/templates/lottery.html
@@ -120,13 +120,10 @@
                     <div class="col-lg-12">
                         <div class="jumbotron">
                             <div name="winner">
-                                <h1 class="display-3">EDNA MODE</h1>
-                                <!--<h1 class="display-3">13-0827-989</h1>
-                                <p class="lead">PATRICK MAURICE PINGOL</p>-->
                             </div>
                             <hr class="my-4">
                             <p class="lead">
-                                <button type="button" class="btn btn-success btn-lg">DRAW</button>
+                                <button name="lottery-draw" type="button" class="btn btn-success btn-lg">DRAW</button>
                             </p>
                         </div>
                     </div>
