--- a/src/main/resources/templates/lottery.html
+++ b/src/main/resources/templates/lottery.html
@@ -120,6 +120,7 @@
                     <div class="col-lg-12">
                         <div class="jumbotron">
                             <div name="winner">
+                                <img src="/images/mariorun.gif" class="img-fluid">
                             </div>
                             <hr class="my-4">
                             <p class="lead">
