Added Live Count feature

--- a/src/main/resources/templates/edit-event.html
+++ b/src/main/resources/templates/edit-event.html
@@ -106,6 +106,9 @@
                     <li>
                         <a href="/import"><i class="fa fa-fw fa-upload"></i> Import CSV</a>
                     </li>
+                    <li>
+                        <a href="/live/count"><i class="fa fa-fw fa-level-up"></i> Live Count</a>
+                    </li>
                 </ul>
             <!-- /.navbar-collapse -->
         </nav>
