--- a/src/main/resources/templates/import-csv.html
+++ b/src/main/resources/templates/import-csv.html
@@ -91,6 +91,9 @@
                     <li class="active">
                         <a href="/import"><i class="fa fa-fw fa-upload"></i> Import CSV</a>
                     </li>
+                    <li>
+                        <a href="/live/count"><i class="fa fa-fw fa-level-up"></i> Live Count</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
