--- a/src/main/resources/templates/live-count.html
+++ b/src/main/resources/templates/live-count.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Attendance - EVENTS</title>
+    <title>LIVE COUNT - EVENTS</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap4.min.css" rel="stylesheet">
@@ -82,7 +82,7 @@
                             </li>-->
                         </ul>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="/attendance"><i class="fa fa-fw fa-clock-o"></i> Attendance</a>
                     </li>
                     <li>
@@ -91,7 +91,7 @@
                     <li>
                         <a href="/import"><i class="fa fa-fw fa-upload"></i> Import CSV</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="/live/count"><i class="fa fa-fw fa-level-up"></i> Live Count</a>
                     </li>
                 </ul>
@@ -107,38 +107,26 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Attendance
+                            Live Count
                             <!--<small>Subheading</small>-->
                         </h1>
                         <ol class="breadcrumb">
                             <li>
-                                <i class="fa fa-home"></i>  <a href="/index">Home</a>
+                                <i class="fa fa-home"></i> <a href="/index">Home</a>
                             </li>
                             <li class="active">
-                                <i class="fa fa-clock-o"></i> Attendance
+                                <i class="fa fa-level-up"></i> Live Count
                             </li>
                         </ol>
                     </div>
                 </div>
                 <!-- /.row -->
-                <div class="row justify-content-center">
+                <div class="row justify-content-center text-center">
                     <div class="col-lg-12">
                         <div class="jumbotron">
-                            <p name="student-info" class="text-center">
-                            </p>
+                            <h1 name="count" class="display-3" style="margin:0px; font-size: 150px;">0</h1>
+                            <span name="count-label" class="lead h1">ATTENDEE</span>
                             <hr class="my-4">
-                            <p class="lead">
-                                <form name="attendance">
-                                    <div class="row justify-content-center no-gutters">
-                                        <div class="col-lg-2">
-                                            <input type="text" name="idnum" placeholder="ID NUMBER" required="required" class="form-control">
-                                        </div>
-                                        <div class="col-lg-1 text-center">
-                                            <button type="button" name="submit-attendance" class="btn btn-success">ENTER</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </p>
                         </div>
                     </div>
                 </div>
