Added reset on forms

--- a/src/main/resources/templates/create-student.html
+++ b/src/main/resources/templates/create-student.html
@@ -194,7 +194,8 @@
                                         </div>
                                         <div class="row justify-content-center form-group">
                                             <div class="col-lg-12 text-center">
-                                                    <button type="button" name="submit-student" class="btn btn-success">SUBMIT</button>
+                                                    <button type="button" name="submit-student" class="btn btn-success">SUBMIT</button>&nbsp;
+                                                    <button type="button" name="reset" class="btn btn-danger">CLEAR</button>
                                             </div>
                                         </div>
                                     </div>
