--- a/src/main/resources/templates/event-status.html
+++ b/src/main/resources/templates/event-status.html
@@ -146,7 +146,8 @@
                                     </div>
                                     <div class="row justify-content-center form-group">
                                         <div class="col-lg-12 text-center">
-                                                <button type="button" name="event-status" class="btn btn-success">SUBMIT</button>
+                                                <button type="button" name="event-status" class="btn btn-success">SUBMIT</button>&nbsp;
+                                                <button type="button" name="reset" class="btn btn-danger">CLEAR</button>
                                         </div>
                                     </div>
                                 </div>
