--- a/src/main/resources/templates/search-student.html
+++ b/src/main/resources/templates/search-student.html
@@ -184,7 +184,7 @@
                                     <div class="row justify-content-center form-group">
                                         <div class="col-lg-12 text-center">
                                                 <button type="button" name="search-student" class="btn btn-success">SEARCH</button>&nbsp;
-                                                <button type="button" name="search-clear" class="btn btn-danger">CLEAR</button>
+                                                <button type="button" name="reset" class="btn btn-danger">CLEAR</button>
                                         </div>
                                     </div>
                                 </div>
