--- a/src/main/resources/templates/create-event.html
+++ b/src/main/resources/templates/create-event.html
@@ -150,7 +150,8 @@
                                 </div>
                                 <div class="row justify-content-center text-center">
                                     <div class="col-lg-6">
-                                        <button type="button" name="create-event" class="btn btn-success">SUBMIT</button>
+                                        <button type="button" name="create-event" class="btn btn-success">SUBMIT</button>&nbsp;
+                                                    <button type="button" name="reset" class="btn btn-danger">CLEAR</button>
                                     </div>
                                 </div>
                             </form>
