Added raffle eligibility tick

--- a/src/main/resources/templates/attendance.html
+++ b/src/main/resources/templates/attendance.html
@@ -137,6 +137,14 @@
                                             <button type="button" name="submit-attendance" class="btn btn-success">ENTER</button>
                                         </div>
                                     </div>
+                                    <div class="row justify-content-center text-center">
+                                        <div class="col-lg-3 form-check" style="margin-top: 5px; margin-bottom: 5px;">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" name="not-eligible" value="true" class="form-check-input">
+                                                Not Eligible For Raffle
+                                            </label>
+                                        </div>
+                                    </div>
                                 </form>
                             </p>
                         </div>
